changed most game logo positions to fixed to prevent jumping around on scroll

--- a/src/styles/Pages/Game.module.css
+++ b/src/styles/Pages/Game.module.css
@@ -5,7 +5,7 @@
 }
 
 .logoSeq2 {
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
     animation: spin 1s, seq2 2s;
@@ -14,7 +14,7 @@
 }
 
 .logoSeq3first {
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
     animation: spin 1s, seq3first 2s;
@@ -23,7 +23,7 @@
 }
 
 .logoSeq3second {
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
     animation: spin 1s, seq3second 2s;
@@ -32,7 +32,7 @@
 }
 
 .logoSeq3third {
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
     animation: spin 1s, seq2 2s;
@@ -41,7 +41,7 @@
 }
 
 .logoSeq3forth {
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
     animation: spin 1s, seq3forth 2s;
@@ -50,7 +50,7 @@
 }
 
 .logoSeq3fifth {
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
     animation: spin 1s, seq3fifth 2s;
@@ -62,13 +62,13 @@
     height: 60%;
     width: 100%;
     margin: 0 auto;
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
 }
 
 .logoSeq5 {
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
     animation: spin 1s, seq5 2s;
@@ -77,7 +77,7 @@
 }
 
 .logoSeq6 {
-    position: absolute;
+    position: fixed;
     z-index: 500;
     cursor: pointer;
     animation: spin 1s, seq6 2s;
